--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
-    "crons": [
-      {
-        "path": "/api/every-minute",
-        "schedule": "* * * * *"
-      },
-      {
-        "path": "/api/every-hour",
-        "schedule": "0 * * * *"
-      },
-      {
-        "path": "/api/every-day",
-        "schedule": "0 0 * * *"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@now/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
+}
